--- a/README.me
+++ b/README.me
@@ -1,6 +1,6 @@
 # Project Title
 
-DevConnector is a social network for developers to showcase their skills, education etc. and connect with others
+One Paragraph of project description goes here
 
 ## Getting Started
 
@@ -11,9 +11,7 @@ These instructions will get you a copy of the project up and running on your loc
 What things you need to install the software and how to install them
 
 ```
-npm -v
-
-node -v
+Give examples
 ```
 
 ### Installing
@@ -23,11 +21,35 @@ A step by step series of examples that tell you how to get a development env run
 Say what the step will be
 
 ```
-npm i
-cd client
-npm i
-cd ..
-npm run dev
+Give the example
+```
+
+And repeat
+
+```
+until finished
+```
+
+End with an example of getting some data out of the system or using it for a little demo
+
+## Running the tests
+
+Explain how to run the automated tests for this system
+
+### Break down into end to end tests
+
+Explain what these tests test and why
+
+```
+Give an example
+```
+
+### And coding style tests
+
+Explain what these tests test and why
+
+```
+Give an example
 ```
 
 ## Deployment
@@ -63,3 +85,4 @@ This project is licensed under the MIT License - see the [LICENSE.md](LICENSE.md
 * Hat tip to anyone whose code was used
 * Inspiration
 * etc
+
