--- a/README.me
+++ b/README.me
@@ -11,7 +11,8 @@ These instructions will get you a copy of the project up and running on your loc
 What things you need to install the software and how to install them
 
 ```
-Give examples
+node -v
+npm -v
 ```
 
 ### Installing
@@ -21,7 +22,11 @@ A step by step series of examples that tell you how to get a development env run
 Say what the step will be
 
 ```
-Give the example
+npm install
+cd client
+npm install
+cd ..
+npm run dev
 ```
 
 And repeat
